--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,10 +6,12 @@ colorama==0.4.6
 cryptography==41.0.5
 defusedxml==0.8.0rc2
 Django==4.2.7
+django-filter==23.3
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 djoser==2.2.0
+exceptiongroup==1.1.3
 flake8==6.1.0
 idna==3.4
 iniconfig==2.0.0
@@ -33,5 +35,7 @@ requests-oauthlib==1.3.1
 social-auth-app-django==5.4.0
 social-auth-core==4.5.0
 sqlparse==0.4.4
+tomli==2.0.1
+typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.0.7
