--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,6 +19,7 @@ isort==5.12.0
 mccabe==0.7.0
 oauthlib==3.2.2
 packaging==23.2
+Pillow==10.1.0
 pluggy==1.3.0
 psycopg2-binary==2.9.9
 pycodestyle==2.11.1
