--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,7 @@ djangorestframework-simplejwt==5.3.0
 djoser==2.2.0
 exceptiongroup==1.1.3
 flake8==6.1.0
+gunicorn==21.2.0
 idna==3.4
 iniconfig==2.0.0
 isort==5.12.0
