--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,30 +3,26 @@ certifi==2023.7.22
 cffi==1.16.0
 charset-normalizer==3.3.2
 colorama==0.4.6
-coreapi==2.3.3
-coreschema==0.0.4
 cryptography==41.0.5
 defusedxml==0.8.0rc2
 Django==4.2.7
 django-filter==23.3
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
-djangorestframework-simplejwt==4.8.0
-djoser==2.1.0
+djangorestframework-simplejwt==5.3.0
+djoser==2.2.0
+drf-base64==2.0
 exceptiongroup==1.1.3
 flake8==6.1.0
-gunicorn==21.2.0
 idna==3.4
 iniconfig==2.0.0
 isort==5.12.0
-itypes==1.2.0
-Jinja2==3.1.2
-MarkupSafe==2.1.3
 mccabe==0.7.0
 oauthlib==3.2.2
 packaging==23.2
 Pillow==10.1.0
 pluggy==1.3.0
+progress==1.6
 psycopg2-binary==2.9.9
 pycodestyle==2.11.1
 pycparser==2.21
@@ -39,12 +35,10 @@ pytz==2023.3.post1
 PyYAML==6.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
-six==1.16.0
-social-auth-app-django==4.0.0
+social-auth-app-django==5.4.0
 social-auth-core==4.5.0
 sqlparse==0.4.4
 tomli==2.0.1
 typing_extensions==4.8.0
 tzdata==2023.3
-uritemplate==4.1.1
 urllib3==2.0.7
