--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -103,7 +103,7 @@ jobs:
           tags: evgengurgen/foodgram_gateway:latest
   deploy:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/master'
     needs: 
       # Дождёмся билда всех образов Foodgram
       - build_and_push_to_docker_hub
