--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -1,9 +1,14 @@
 server {
   listen 80;
   
+  location /api/users/ {
+    proxy_set_header Host $http_host;
+    proxy_pass http://backend:8000/user/;
+  }
+
   location /api/ {
     proxy_set_header Host $http_host;
-    proxy_pass http://backend:8000/api/;
+    proxy_pass http://backend:8000/;
   }
 
   location /admin/ {
