--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -1,14 +1,24 @@
 server {
   listen 80;
-  
-  location /api/users/ {
+
+  location /recipes/cart/ {
     proxy_set_header Host $http_host;
-    proxy_pass http://backend:8000/user/;
+    proxy_pass http://backend:8000/api/recipes/download_shopping_cart/;
+  }  
+
+  location /users/subscriptions/ {
+    proxy_set_header Host $http_host;
+    proxy_pass http://backend:8000/api/users/subscriptions/;
   }
 
-  location /api/ {
+  location /user/ {
     proxy_set_header Host $http_host;
-    proxy_pass http://backend:8000/;
+    proxy_pass http://backend:8000/api/users/;
+  }
+
+  location / {
+    proxy_set_header Host $http_host;
+    proxy_pass http://backend:8000/api/;
   }
 
   location /admin/ {
