--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -1,22 +1,7 @@
 server {
   listen 80;
-
-  location /recipes/cart/ {
-    proxy_set_header Host $http_host;
-    proxy_pass http://backend:8000/api/recipes/download_shopping_cart/;
-  }  
-
-  location /users/subscriptions/ {
-    proxy_set_header Host $http_host;
-    proxy_pass http://backend:8000/api/users/subscriptions/;
-  }
-
-  location /user/ {
-    proxy_set_header Host $http_host;
-    proxy_pass http://backend:8000/api/users/;
-  }
-
-  location / {
+  
+  location /api/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/api/;
   }
@@ -29,5 +14,9 @@ server {
   location / {
     alias /staticfiles/;
     index index.html;
+
+    rewrite ^/recipes/(.*)$ /api/recipes/$1 break;
+    rewrite ^/subscriptions/(.*)$ /api/users/subscriptions break;
+    rewrite ^/user/(.*)$ /api/users/$1 break;
   }
 }
