--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -14,6 +14,7 @@ server {
   location / {
     alias /staticfiles/;
     index index.html;
+    try_files $uri $uri/ /index.html;
 
     rewrite ^/recipes/(.*)$ /api/recipes/$1 break;
     rewrite ^/subscriptions/(.*)$ /api/users/subscriptions break;
