--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -2,6 +2,7 @@ server {
   listen 80;
   
   location /api/ {
+    try_files $uri $uri/ /api/index.html;
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/api/;
   }
@@ -15,9 +16,5 @@ server {
     alias /staticfiles/;
     index index.html;
     try_files $uri $uri/ /index.html;
-
-    rewrite ^/recipes/(.*)$ /api/recipes/$1 break;
-    rewrite ^/subscriptions/(.*)$ /api/users/subscriptions break;
-    rewrite ^/user/(.*)$ /api/users/$1 break;
   }
 }
