--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -1,21 +1,27 @@
 server {
   listen 80;
+  
+  client_max_body_size 20M;
 
   location /api/docs/ {
     root /usr/share/nginx/html;
     try_files $uri $uri/redoc.html;
   }
+
+  location /media/ {
+    root /var/html;
+  }
   
   location /api/ {
-    proxy_set_header Host $http_host;
-    proxy_pass http://backend:8000/api/;
-    try_files $uri $uri/ /index.html;
+    proxy_set_header Host $host;
+    proxy_set_header        X-Forwarded-Host $host;
+    proxy_set_header        X-Forwarded-Server $host;
+    proxy_pass http://backend:8000;
   }
 
   location /admin/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/admin/;
-    try_files $uri $uri/ /index.html;
   }
 
   location / {
