--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -25,8 +25,8 @@ server {
   }
 
   location / {
-      root /usr/share/nginx/html;
-      index  index.html index.htm;
+      alias /staticfiles/;
+      index index.html;
       try_files $uri /index.html;
       proxy_set_header        Host $host;
       proxy_set_header        X-Real-IP $remote_addr;
