--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -20,13 +20,12 @@ server {
   }
 
   location /admin/ {
-    alias /static/;
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/admin/;
   }
 
   location / {
-      alias /static/;
+      alias /staticfiles/;
       index index.html;
       try_files $uri /index.html;
       proxy_set_header        Host $host;
