--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -141,9 +141,9 @@ jobs:
           sudo docker compose -f docker-compose.production.yml down
           sudo docker compose -f docker-compose.production.yml up -d
           # Выполняет миграции и сбор статики
-          sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
-          sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
-          sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /static/
+          sudo docker compose -f docker-compose.production.yml exec evgengurgen/foodgram_backend python manage.py migrate
+          sudo docker compose -f docker-compose.production.yml exec evgengurgen/foodgram_backend python manage.py collectstatic
+          sudo docker compose -f docker-compose.production.yml exec evgengurgen/foodgram_backend cp -r /app/collected_static/. /backend_static/static/
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
