--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 SECRET_KEY=django-insecure-qr3+y@npkwi=d@0$^)3jps@@h)$sctdy+964@5$c0-7d)8^dhc
-ALLOWED_HOSTS=127.0.0.1, localhost, 158.160.81.200, yp62.sytes.net
+ALLOWED_HOSTS=158.160.81.200, 127.0.0.1, localhost, yp62.sytes.net
 DEBUG_VALUE=True
 POSTGRES_USER=django_user
 POSTGRES_PASSWORD=mysecretpassword
