--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -4,17 +4,18 @@ server {
   client_max_body_size 20M;
 
   location /api/docs/ {
+    proxy_set_header Host $http_host;
     root /usr/share/nginx/html;
     try_files $uri $uri/redoc.html;
   }
 
   location /media/ {
-    proxy_set_header Host $host;
+    proxy_set_header Host $http_host;
     alias /staticfiles/;
   }
   
   location /api/ {
-    proxy_set_header Host $host;
+    proxy_set_header Host $http_host;
     proxy_set_header        X-Forwarded-Host $host;
     proxy_set_header        X-Forwarded-Server $host;
     proxy_pass http://backend:8000;
