--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -11,7 +11,7 @@ server {
 
   location /media/ {
     proxy_set_header Host $http_host;
-    alias /staticfiles/;
+    alias /media/;
   }
   
   location /api/ {
