--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -30,7 +30,7 @@ server {
       alias /staticfiles/;
       index index.html;
       try_files $uri /index.html;
-      proxy_set_header        Host $host;
+      proxy_set_header Host $http_host;
       proxy_set_header        X-Real-IP $remote_addr;
       proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header        X-Forwarded-Proto $scheme;
