--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -5,25 +5,25 @@ server {
   client_max_body_size 20M;
 
   location /api/docs/ {
-    proxy_set_header Host $http_host;
+    proxy_set_header Host $host;
     root /usr/share/nginx/html;
     try_files $uri $uri/redoc.html;
   }
 
   location /media/ {
-    proxy_set_header Host $http_host;
+    proxy_set_header Host $host;
     alias /media/;
   }
   
   location /api/ {
-    proxy_set_header Host $http_host;
+    proxy_set_header Host $host;
     proxy_set_header        X-Forwarded-Host $host;
     proxy_set_header        X-Forwarded-Server $host;
     proxy_pass http://backend:8000;
   }
 
   location /admin/ {
-    proxy_set_header Host $http_host;
+    proxy_set_header Host $host;
     proxy_pass http://backend:8000/admin/;
   }
 
@@ -31,7 +31,7 @@ server {
       alias /staticfiles/;
       index index.html;
       try_files $uri /index.html;
-      proxy_set_header Host $http_host;
+      proxy_set_header Host $host;
       proxy_set_header        X-Real-IP $remote_addr;
       proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header        X-Forwarded-Proto $scheme;
