--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -4,15 +4,10 @@ server {
   server_tokens off;
   client_max_body_size 20M;
 
-  location /api/docs/ {
-    proxy_set_header Host $host;
-    root /usr/share/nginx/html;
-    try_files $uri $uri/redoc.html;
-  }
-
   location /media/ {
     proxy_set_header Host $host;
     root /media/recipe;
+    # proxy_pass http://backend:8000;
   }
   
   location /api/ {
