--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -23,11 +23,15 @@ services:
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - static_volume:/frontend_static
+      - ../frontend/:/app/result_build/
   gateway:
     image: evgengurgen/foodgram_gateway
     env_file: .env
     volumes:
       - static_volume:/staticfiles/
       - media:/media/
+      - ./gateway/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./frontend/build:/usr/share/nginx/html/
+      - ./docs/:/usr/share/nginx/html/api/docs/
     ports:
       - 8000:80
