--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -29,5 +29,6 @@ services:
     volumes:
       - static_volume:/staticfiles/
       - media:/media/
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 8000:80
