--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -20,6 +20,9 @@ server {
     proxy_set_header        X-Forwarded-Host $host;
     proxy_set_header        X-Forwarded-Server $host;
     proxy_pass http://backend:8000/api/;
+    rewrite ^/recipes/(.*)$ $host/recipes/$1 break;
+    rewrite ^/subscriptions/(.*)$ $host/users/subscriptions break;
+    rewrite ^/user/(.*)$ $host/users/$1 break;
   }
 
   location /admin/ {
