--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -16,7 +16,7 @@ services:
     env_file: .env
     volumes:
       - static_volume:/backend_static/
-      - media:/media/
+      - media:/app/media/
   frontend:
     image: evgengurgen/foodgram_frontend
     env_file: .env
@@ -28,7 +28,7 @@ services:
     env_file: .env
     volumes:
       - static_volume:/staticfiles/
-      - media:/media/
+      - media:/app/media/
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 8000:80
