--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -12,7 +12,7 @@ server {
 
   location /media/ {
     proxy_set_header Host $http_host;
-    alias /media/;
+    root /app/media/;
   }
   
   location /api/ {
