--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -30,5 +30,6 @@ services:
       - static_volume:/staticfiles/
       - media:/app/media/
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./docs/:/usr/share/nginx/html/api/docs/
     ports:
       - 8000:80
