--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -28,7 +28,7 @@ services:
     env_file: .env
     volumes:
       - static_volume:/staticfiles/
-      - media:/app/media/
+      - media:/media/
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ./docs/:/usr/share/nginx/html/api/docs/
     ports:
