--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -3,6 +3,7 @@ server {
   index index.html;
   server_tokens off;
   client_max_body_size 20M;
+  server_name yp62.sytes.net;
 
   location /api/docs/ {
     proxy_set_header Host $http_host;
